[package]
name = "usb_monitor"
authors = ["Mateusz Janda <mateusz.janda@gmail.com>"]
repository = "https://github.com/MateuszJanda/usb_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.futures]
version = "0.3"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Foundation",
    "Foundation_Collections",
    "Devices_Enumeration",
]